@@ -10,7 +10,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkMacOSXMouseEvent.c,v 1.37 2009/07/06 20:29:21 dkf Exp $
+ * RCS: @(#) $Id: tkMacOSXMouseEvent.c,v 1.38 2010/01/06 14:58:30 dkf Exp $
  */
 
 #include "tkMacOSXPrivate.h"
@@ -535,6 +535,40 @@ GenerateButtonEvent(
 
     Tk_UpdatePointer(tkwin, medPtr->global.h, medPtr->global.v, medPtr->state);
     return true;
+}
+
+void
+TkpWarpPointer(
+    TkDisplay *dispPtr)
+{
+    CGPoint pt;
+    UInt32 buttonState;
+
+    if (dispPtr->warpWindow) {
+	int x, y;
+
+	Tk_GetRootCoords(dispPtr->warpWindow, &x, &y);
+	pt.x = x + dispPtr->warpX;
+	pt.y = y + dispPtr->warpY;
+    } else {
+	pt.x = dispPtr->warpX;
+	pt.y = dispPtr->warpY;
+    }
+
+    /*
+     * Tell the OSX core to generate the events to make it happen. This is
+     * fairly ugly, but means that under most circumstances we'll register all
+     * the events that would normally be generated correctly. If we use
+     * CGWarpMouseCursorPosition instead, strange things happen.
+     */
+
+    buttonState = (GetCurrentEvent() && Tk_MacOSXIsAppInFront())
+	    ? GetCurrentEventButtonState() : GetCurrentButtonState();
+
+    CGPostMouseEvent(pt, 1 /* generate motion events */, 5,
+	    buttonState&1 ? 1 : 0, buttonState&2 ? 1 : 0,
+	    buttonState&4 ? 1 : 0, buttonState&8 ? 1 : 0,
+	    buttonState&16 ? 1 : 0);
 }
 
 /*
